@@ -1,4 +1,9 @@
-﻿drkns 21.09.2014 11:46:25 +0200 - build 4115
+﻿zg 21.09.2014 13:35:14 +0200 - build 4116
+
+1. уточнение 4109.2: открытие просмотра падало, если в панелях была открыта информационная панель
+   в папке без описания или быстрый просмотр для папки.
+
+drkns 21.09.2014 11:46:25 +0200 - build 4115
 
 1. Макросы для эмуляции variadic templates вынесены отдельно, улучшены и использованы вместо ручной копипасты везде, где нужно.
 
